--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -29,9 +29,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:completionHint="@string/currency_autocomplete_hint"
+        android:hint = "@string/currency_autocomplete_hint"
         android:completionThreshold='2'
         android:contentDescription="@string/currency_autocomplete_hint"
-        android:text="@string/currency_autocomplete_hint"
         app:layout_constraintBottom_toTopOf="@+id/button_first"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.481"
