--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -158,7 +158,7 @@
                 android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/target_currency"
+                android:id="@+id/target_currency_output"
                 android:layout_width="76dp"
                 android:layout_height="wrap_content"
                 android:layout_column="1"
