--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -72,101 +72,26 @@
         app:layout_constraintTop_toBottomOf="@+id/Salary_value_input">
 
         <RadioButton
-            android:id="@+id/sound"
+            android:id="@+id/hourly"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/salary_period_hourly" />
 
         <RadioButton
-            android:id="@+id/vibration"
+            android:id="@+id/monthly"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/salary_period_monthly" />
 
         <RadioButton
-            android:id="@+id/silent"
+            android:id="@+id/yearly"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/salary_period_yearly" />
 
     </RadioGroup>
 
-    <TableLayout
-        android:id="@+id/tableLayout"
-        android:layout_width="231dp"
-        android:layout_height="240dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_first">
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:text="@string/salary_period_hourly"
-                android:textSize="24sp" />
-
-            <TextView
-                android:id="@+id/target_hourly_salary"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:textSize="24sp" />
-
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:text="@string/salary_period_monthly"
-                android:textSize="24sp" />
-
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:text="@string/salary_period_yearly"
-                android:textSize="24sp" />
-
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:text="@string/currency_output"
-                android:textSize="24sp" />
-
-            <TextView
-                android:id="@+id/target_currency_output"
-                android:layout_width="76dp"
-                android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:textAlignment="center"
-                android:textSize="24sp" />
-
-        </TableRow>
-    </TableLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
