Payment period option is implemented though rudimentary. Excnhage rate is being implemented

--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -11,8 +11,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/convert_button_title"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.483"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/payroll_period" />
 
@@ -90,8 +91,6 @@
             android:text="@string/salary_period_yearly" />
 
     </RadioGroup>
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
